--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@babel/preset-react": "7.22.3",
+    "@mediapipe/tasks-vision": "^0.10.2-rc2",
     "css-loader": "6.8.1",
     "express": "^4.18.2",
     "html-webpack-plugin": "^5.5.3",
